--- a/love/love.html
+++ b/love/love.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="love.css">
-    <title>Love</title>
+    <title>Love Letter To My Babii</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body style="margin: 0;
+padding: 0;
+background-image: url('https://img.freepik.com/premium-vector/city-skyline-with-cloudy-sunset-sky_104785-581.jpg?size=626&ext=jpg&ga=GA1.1.1826414947.1699660800&semt=ais');
+background-size: cover;
+background-repeat: no-repeat;
+background-attachment: fixed;
+max-height: 10vh;">
     <div class="wrapper">
         <!-- <img src="../thư love.png" alt=""> -->
         <div class="formInput">
@@ -58,6 +64,11 @@
             </div>
             <div class="ground-line">
                 <div>
+                    <span class="line1"></span>
+                    <span class="line2"></span>
+                    <span class="line3"></span>
+                    <span class="line4"></span>
+                    <span class="line5"></span>
                     <span class="line1"></span>
                     <span class="line2"></span>
                     <span class="line3"></span>
